cluster/apps/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  ports:
    - name: whoami
      port: 80
      targetPort: 80
  selector:
    app: whoami
